# anagrams

./: Dockerfile  README.md  justfile  pyproject.toml
src/anagrams/core/: __init__.py  game.py  player.py  utils.py
src/anagrams/core/dictionary/: 2of12inf.txt  __init__.py
src/anagrams/server/: __main__.py  game_manager.py  log.py  messages.py  server.py  utils.py
src/anagrams/ui/: index.html  package-lock.json  package.json  vite.config.js
src/anagrams/ui/src/: App.vue  index.css  main.js
src/anagrams/ui/src/components/: Game.vue  Join.vue  Letter.vue  PlayerInfo.vue  Word.vue
test/core/: test_dictionary.py  test_game.py
