[project]
authors = [{ name = "ian-bulovic", email = "ian.bulovic@gmail.com" }]
dependencies = [
    "click>=8.1.8",
    "fastapi[standard]>=0.115.7",
    "httpx>=0.28.1",
    "websockets>=14.2",
]
description = "Add your description here"
name = "anagrams"
readme = "README.md"
requires-python = ">=3.13"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[project.scripts]
anagrams = "anagrams.server.__main__:main"

[dependency-groups]
dev = ["pytest>=8.3.4", "ruff>=0.9.3"]
